--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -8,3 +8,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f9fafb;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
